manifests/base/server/hanzocd-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: hanzocd-server
    app.kubernetes.io/part-of: hanzocd
    app.kubernetes.io/component: server
  name: hanzocd-server
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: hanzocd-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hanzocd-server
    spec:
      serviceAccountName: hanzocd-server
      containers:
        - name: hanzocd-server
          image: ghcr.io/hanzoai/cd:latest
          imagePullPolicy: Always
          args:
            - /usr/local/bin/hanzocd-server
          volumeMounts:
            - name: ssh-known-hosts
              mountPath: /app/config/ssh
            - name: tls-certs
              mountPath: /app/config/tls
            - name: hanzocd-repo-server-tls
              mountPath: /app/config/server/tls
            - name: hanzocd-repo-server-mtls
              mountPath: /app/config/reposerver/mtls
            - name: hanzocd-dex-server-tls
              mountPath: /app/config/dex/tls
            - mountPath: /home/cd
              name: plugins-home
            - mountPath: /tmp
              name: tmp
            - name: hanzocd-cmd-params-cm
              mountPath: /home/cd/params
          ports:
            - containerPort: 8080
            - containerPort: 8083
          livenessProbe:
            httpGet:
              path: /healthz?full=true
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 30
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
      volumes:
        - emptyDir: {}
          name: plugins-home
        - emptyDir: {}
          name: tmp
        - name: ssh-known-hosts
          configMap:
            name: hanzocd-ssh-known-hosts-cm
        - name: tls-certs
          configMap:
            name: hanzocd-tls-certs-cm
        - name: hanzocd-repo-server-tls
          secret:
            secretName: hanzocd-repo-server-tls
            optional: true
            items:
              - key: tls.crt
                path: tls.crt
              - key: tls.key
                path: tls.key
              - key: ca.crt
                path: ca.crt
        - name: hanzocd-dex-server-tls
          secret:
            secretName: hanzocd-dex-server-tls
            optional: true
            items:
              - key: tls.crt
                path: tls.crt
              - key: ca.crt
                path: ca.crt
        - name: hanzocd-repo-server-mtls
          secret:
            secretName: hanzocd-repo-server-mtls
            optional: true
            items:
              - key: client.crt
                path: client.crt
              - key: client.key
                path: client.key
              - key: server-ca.crt
                path: server-ca.crt
        - name: hanzocd-cmd-params-cm
          configMap:
            optional: true
            name: hanzocd-cmd-params-cm
            items:
            - key: server.profile.enabled
              path: profiler.enabled
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: hanzocd-server
                topologyKey: kubernetes.io/hostname
            - weight: 5
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/part-of: hanzocd
                topologyKey: kubernetes.io/hostname
      nodeSelector:
        kubernetes.io/os: linux
