manifests/base/server/hanzocd-server-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: hanzocd-server-metrics
    app.kubernetes.io/part-of: hanzocd
    app.kubernetes.io/component: server
  name: hanzocd-server-metrics
spec:
  ports:
  - name: metrics
    protocol: TCP
    port: 8083
    targetPort: 8083
  selector:
    app.kubernetes.io/name: hanzocd-server
