manifests/base/server/hanzocd-server-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: hanzocd-server
    app.kubernetes.io/part-of: hanzocd
    app.kubernetes.io/component: server
  name: hanzocd-server-network-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: hanzocd-server
  ingress:
  - {}
  policyTypes:
  - Ingress
